# webapp-template

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
http-requests/: basic.http
web/: Cargo.toml
web/src/: lib.rs
webapp_template_app/: Cargo.toml
webapp_template_app/src/: main.rs
webapp_template_feature_a/: Cargo.toml
webapp_template_feature_a/src/: lib.rs
webapp_template_web/: Cargo.toml
webapp_template_web/src/: lib.rs
