[package]
name = "webapp_template_app"
description = "The main application that pulls together other crates."
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webapp_template_web = { path = "../webapp_template_web" }
tracing.workspace = true
